--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack-merge": "^5.10.0"
   },
   "dependencies": {
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
